--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         {
             "type": "package",
             "package": {
-                "name": "aws-sdk-for-php",
+                "name": "aws-sdk-for-php-deps-fix",
                 "version": "master",
                 "source": {
                     "url": "https://github.com/amazonwebservices/aws-sdk-for-php.git",
