--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],  
     "require": {
         "symfony/framework-bundle": "2.*",
-        "aws-sdk-for-php": "*"
+        "amazonwebservices/aws-sdk-for-php": "*"
     },
     "repositories": [
         {
