--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":         "cybernox/amazon-webservices-bundle",
+    "name":         "sebastian-alfers/amazon-webservices-bundle",
     "description":  "A Symfony2 Bundle for interfacing with Amazon Web Services (AWS)", 
     "keywords":     ["amazon", "aws", "web services"],
     "license":      "BSD",
@@ -17,7 +17,7 @@
         {
             "type": "package",
             "package": {
-                "name": "aws-sdk-for-php-deps-fix",
+                "name": "aws-sdk-for-php",
                 "version": "master",
                 "source": {
                     "url": "https://github.com/amazonwebservices/aws-sdk-for-php.git",
